added pamela hwang

--- a/index.html
+++ b/index.html
@@ -182,6 +182,21 @@
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 leadership-item">
+                            <a href="#leadershipModal2" class="leadership-link" data-toggle="modal">
+                                <div class="leadership-hover">
+                                    <div class="leadership-hover-content">
+                                        <i class="fa fa-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img src="img/bios/pamelahwang.jpg" class="img-responsive" alt="">
+                            </a>
+                            <div class="leadership-caption">
+                                <h4>Pamela Hwang</h4>
+                                <p class="text-muted">Thunder // Operations Officer</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 leadership-item">
                             <a href="#leadershipModal3" class="leadership-link" data-toggle="modal">
                                 <div class="leadership-hover">
                                     <div class="leadership-hover-content">
@@ -195,7 +210,6 @@
                                 <p class="text-muted">Lightning // Coordinator</p>
                             </div>
                         </div>
-
                         <div class="col-md-4 col-sm-6 leadership-item">
                             <a href="#leadershipModal4" class="leadership-link" data-toggle="modal">
                                 <div class="leadership-hover">
@@ -224,6 +238,7 @@
                                 <p class="text-muted">Thunder // House and Design</p>
                             </div>
                         </div>
+
                         <div class="col-md-4 col-sm-6 leadership-item">
                             <a href="#leadershipModal6" class="leadership-link" data-toggle="modal">
                                 <div class="leadership-hover">
@@ -238,7 +253,6 @@
                                 <p class="text-muted">Thunder // Worship Leader</p>
                             </div>
                         </div>
-
                         <div class="col-md-4 col-sm-6 leadership-item">
                             <a href="#leadershipModal4" class="leadership-link" data-toggle="modal">
                                 <div class="leadership-hover">
@@ -267,6 +281,7 @@
                                 <p class="text-muted">Thunder // Events & Ministries Coordinator</p>
                             </div>
                         </div>
+
                         <div class="col-md-4 col-sm-6 leadership-item">
                             <a href="#leadershipModal6" class="leadership-link" data-toggle="modal">
                                 <div class="leadership-hover">
@@ -281,7 +296,6 @@
                                 <p class="text-muted">Media // Media Coordinator</p>
                             </div>
                         </div>
-
                         <div class="col-md-4 col-sm-6 leadership-item">
                             <a href="#leadershipModal4" class="leadership-link" data-toggle="modal">
                                 <div class="leadership-hover">
@@ -303,7 +317,7 @@
                                         <i class="fa fa-plus fa-3x"></i>
                                     </div>
                                 </div>
-                                <img src="img/bios/youhyunkim.png" class="img-responsive" alt="">
+                                <img src="img/bios/youhyunkim.jpg" class="img-responsive" alt="">
                             </a>
                             <div class="leadership-caption">
                                 <h4>Youhyun Kim</h4>
