replaced text for mission statement

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                                 <a href="#page-top"></a>
                             </li>
                             <li>
-                                <a class="page-scroll" href="#services">Services</a>
+                                <a class="page-scroll" href="#mission-statement">Mission Statement</a>
                             </li>
                             <li>
                                 <a class="page-scroll" href="#leadership">Leadership</a>
                             </li>
-                            <li>
-                                <a class="page-scroll" href="#about">About</a>
-                            </li>
                             <!--<li>
-                                <a class="page-scroll" href="#team">Team</a>
+                                <a class="page-scroll" href="#about">About</a>
                             </li>-->
+                            <li>
+                                <a class="page-scroll" href="#team">Team</a>
+                            </li>
                             <li>
                                 <a class="page-scroll" href="#contact">Contact</a>
                             </li>
@@ -89,7 +89,7 @@
                     <div class="intro-text">
                         <div class="intro-lead-in">Do nothing from selfish ambition or conceit, but in humility count others more significant than yourselves. Let each of you look not only to his own interests, but also to the interests of others. <p>Philippians 2:3-4</p></div>
                         <div class="intro-heading">It's Nice To Meet You</div>
-                        <a href="#services" class="page-scroll btn btn-xl">Explore</a>
+                        <a href="#mission-statement" class="page-scroll btn btn-xl">Explore</a>
                     </div>
                 </div>
             </header>
@@ -99,39 +99,100 @@
                 </div>
             </section>
 
-            <!-- Services Section -->
-            <section id="services">
+            <!-- Mission Statement Section -->
+            <section id="mission-statement">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <h2 class="section-heading">Services</h2>
-                            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h2 class="section-heading">Mission Statement</h2>
+                            <div class="col-md-3"></div>
+                            <div class="col-md-6 text-center text-muted">
+                                <p class="large">
+                                    Our mission is the revelation of God&#39;s anointing 
+                                    within His people&#39;s past, present and future.
+                                    Though we are sinners, God has granted us His grace,
+                                    and thus we are reconciled with Him and with each other.
+                                </p>
+                            </div>
+                            <div class="col-md-3"></div>
                         </div>
                     </div>
                     <div class="row text-center">
                         <div class="col-md-4">
                             <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-refresh fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="service-heading">E-Commerce</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <h4 class="mission-statement-heading">Blessings</h4>
+                            <p class="text-muted large">While honoring God&#39;s blessings given to those before us, we receive new blessings today.</p>
                         </div>
                         <div class="col-md-4">
                             <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="service-heading">Responsive Design</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <h4 class="mission-statement-heading">Gospel</h4>
+                            <p class="text-muted large">We are vessels through which His Gospel preaches, heals and continually defends against the temptation of our sinful nature.</p>
                         </div>
                         <div class="col-md-4">
                             <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="service-heading">Web Security</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <h4 class="mission-statement-heading">Ministry</h4>
+                            <p class="text-muted large">We plant the seeds to continuously support and build the ministry&#39;s tomorrow with each new generation.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="bg2" class="movingBackground">
+                <div class="bcg" data-stellar-background-ratio="0.3">
+                </div>
+            </section>
+
+            <!-- Leadership Section -->
+            <section id="mission-statement">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h2 class="section-heading">Mission Statement</h2>
+                            <div class="col-md-3"></div>
+                            <div class="col-md-6 text-center text-muted">
+                                <p class="large">
+                                    Our mission is the revelation of God&#39;s anointing 
+                                    within His people&#39;s past, present and future.
+                                    Though we are sinners, God has granted us His grace,
+                                    and thus we are reconciled with Him and with each other.
+                                </p>
+                            </div>
+                            <div class="col-md-3"></div>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-refresh fa-stack-1x fa-inverse"></i>
+                            </span>
+                            <h4 class="mission-statement-heading">Blessings</h4>
+                            <p class="text-muted large">While honoring God&#39;s blessings given to those before us, we receive new blessings today.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
+                            </span>
+                            <h4 class="mission-statement-heading">Gospel</h4>
+                            <p class="text-muted large">We are vessels through which His Gospel preaches, heals and continually defends against the temptation of our sinful nature.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+                            </span>
+                            <h4 class="mission-statement-heading">Ministry</h4>
+                            <p class="text-muted large">We plant the seeds to continuously support and build the ministry&#39;s tomorrow with each new generation.</p>
                         </div>
                     </div>
                 </div>
@@ -335,7 +396,7 @@
             </section>
 
             <!-- About Section -->
-            <section id="about">
+            <!--<section id="about">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
@@ -418,10 +479,10 @@
             <section id="bg2" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
-            </section>
+            </section>-->
 
             <!-- Team Section -->
-            <!-- <section id="team" class="bg-light-gray">
+            <section id="team" class="bg-light-gray">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
@@ -482,7 +543,12 @@
                         </div>
                     </div>
                 </div>
-            </section>-->
+            </section>
+
+            <section id="bg2" class="movingBackground">
+                <div class="bcg" data-stellar-background-ratio="0.3">
+                </div>
+            </section>
 
             <!-- Clients Aside -->
             <!--<aside class="clients">
