--- a/index.html
+++ b/index.html
@@ -121,10 +121,7 @@
                             <div class="col-md-3"></div>
                             <div class="col-md-6 text-center text-muted">
                                 <p class="large">
-                                    Our mission is the revelation of God&#39;s anointing 
-                                    within His people&#39;s past, present and future.
-                                    Though we are sinners, God has granted us His grace,
-                                    and thus we are reconciled with Him and with each other.
+                                    Our mission is the revelation of God&#39;s anointing within His people&#39;s past, present and future.Though we are sinners, God has granted us His grace, and thus we are reconciled with Him and with each other.
                                 </p>
                             </div>
                             <div class="col-md-3"></div>
@@ -136,7 +133,7 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="fa fa-refresh fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="mission-statement-heading">Blessings</h4>
+                            <h4 class="subsection-heading">Blessings</h4>
                             <p class="text-muted large">While honoring God&#39;s blessings given to those before us, we receive new blessings today.</p>
                         </div>
                         <div class="col-md-4">
@@ -144,7 +141,7 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="mission-statement-heading">Gospel</h4>
+                            <h4 class="subsection-heading">Gospel</h4>
                             <p class="text-muted large">We are vessels through which His Gospel preaches, heals and continually defends against the temptation of our sinful nature.</p>
                         </div>
                         <div class="col-md-4">
@@ -152,7 +149,7 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="mission-statement-heading">Ministry</h4>
+                            <h4 class="subsection-heading">Ministry</h4>
                             <p class="text-muted large">We plant the seeds to continuously support and build the ministry&#39;s tomorrow with each new generation.</p>
                         </div>
                     </div>
@@ -164,12 +161,12 @@
                 </div>
             </section>
 
-            <!-- Leadership Section -->
+            <!-- Service Information Section -->
             <section id="information">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <h2 class="section-heading">Service Information</h2>
+                            <h2 class="section-heading">Information</h2>
                         </div>
                     </div>
                     <div class="row text-center">
@@ -178,7 +175,7 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="mission-statement-heading">Service Times</h4>
+                            <h4 class="subsection-heading">Service Time</h4>
                             <p class="text-muted large">Sunday 11am - 12pm</p>
                         </div>
                         <div class="col-md-6">
@@ -186,8 +183,9 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="mission-statement-heading">Location</h4>
+                            <h4 class="subsection-heading">Location</h4>
                             <p class="text-muted large">100 Herrmann Pl. Yonkers, New York 10710</p>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1874.2011239559713!2d-73.86008593428204!3d40.95614240191103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2ed392c443915%3A0x594df7baf3822602!2sNew+Hope+Reformed+Church!5e0!3m2!1sen!2sus!4v1444704064948" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -208,55 +206,115 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-md-6 text-center">
+                            <h3 class="subsection-heading">
+                                Lightning
+                            </h3>
+                            <h3 class="leadership-section-subheading section-subheading text-muted">Visionary Board Committee</h3>
+                            <p class="large">
+                                The purpose of Lightning is to oversee the ministry’s overall mission in the current and future state, and to ensure that certain tasks aligned to the mission statement are appropriately identified, measured, monitored and controlled within the governance process managed by Lightning. Lightning members are nominated and approved by the Pastor.
+                            </p>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <h3 class="subsection-heading">
+                                Thunder
+                            </h3>
+                            <h3 class="leadership-section-subheading section-subheading text-muted">Administrative Board Committee</h3>
+                            <p class="large">
+                                The purpose of Thunder is to manage the tasks and activities aligned to the ministry's mission statement. Such tasks and activities are designed for the benefit of the congregation by promoting fellowship and awareness. New Thunder members are nominated by Lightning, recommended to existing Thunder members, and appointed by the congregation by election, which is held annually on the first Sunday of June, or as needed.
+                            </p>
+                        </div>
+                    </div>        
+                    <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                                <h4>Kay Garland</h4>
-                                <p class="text-muted">Lead Designer</p>
-                                <ul class="list-inline social-buttons">
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a>
-                                    </li>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                                    </li>
-                                </ul>
+                                <img src="img/bios/paullee.png" class="img-responsive img-circle" alt="">
+                                <h4>Paul Lee</h4>
+                                <p class="text-muted">Lightning // EM Pastor</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                                <h4>Larry Parker</h4>
-                                <p class="text-muted">Lead Marketer</p>
-                                <ul class="list-inline social-buttons">
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a>
-                                    </li>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                                    </li>
-                                </ul>
+                                <img src="img/bios/jaesunhwang.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Jaesun Hwang</h4>
+                                <p class="text-muted">Lightning // Missions Director</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                                <h4>Diana Pertersen</h4>
-                                <p class="text-muted">Lead Developer</p>
-                                <ul class="list-inline social-buttons">
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a>
-                                    </li>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                                    </li>
-                                </ul>
+                                <img src="img/bios/pamelahwang.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Pamela Hwang</h4>
+                                <p class="text-muted">Thunder // Operations Officer</p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2 text-center">
-                            <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/jessicakim.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Jessica Kim</h4>
+                                <p class="text-muted">Lightning // Coordinator</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/jamesyoon.jpg" class="img-responsive img-circle" alt="">
+                                <h4>James Yoon</h4>
+                                <p class="text-muted">Lightning // Membership Care</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/hyunjinpark.png" class="img-responsive img-circle" alt="">
+                                <h4>Hyunjin Park</h4>
+                                <p class="text-muted">Thunder // House and Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/matthewkim.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Matthew Kim</h4>
+                                <p class="text-muted">Thunder // Worship Leader</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/peterchong.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Peter Chong</h4>
+                                <p class="text-muted">Thunder // Events &amp; Ministries Coordinator</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/minamin.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Mina Min</h4>
+                                <p class="text-muted">Thunder // Events &amp; Ministries Coordinator</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/sylvialee.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Sylvia Lee</h4>
+                                <p class="text-muted">Media // Media Coordinator</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/minjuji.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Minju Ji</h4>
+                                <p class="text-muted">Thunder // General Administration</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="team-member">
+                                <img src="img/bios/youhyunkim.jpg" class="img-responsive img-circle" alt="">
+                                <h4>Youhyun Kim</h4>
+                                <p class="text-muted">Media // Webmaster</p>
+                            </div>
                         </div>
                     </div>
                 </div>
