--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </div>
             </section>
 
-            <section id="bg2" class="movingBackground">
+            <section id="bg3" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
             </section>
@@ -320,7 +320,7 @@
                 </div>
             </section>
 
-            <section id="bg2" class="movingBackground">
+            <section id="bg4" class="movingBackground">
                 <div class="bcg" data-stellar-background-ratio="0.3">
                 </div>
             </section>
@@ -677,27 +677,9 @@
 
             <footer>
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <span class="copyright">Copyright &copy; Your Website 2014</span>
-                        </div>
-                        <div class="col-md-4">
-                            <ul class="list-inline social-buttons">
-                                <li><a href="#"><i class="fa fa-twitter"></i></a>
-                                </li>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a>
-                                </li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4">
-                            <ul class="list-inline quicklinks">
-                                <li><a href="#">Privacy Policy</a>
-                                </li>
-                                <li><a href="#">Terms of Use</a>
-                                </li>
-                            </ul>
+                    <div class="row text-center">
+                        <div class="col-lg-12">
+                            <span class="copyright">Copyright &copy; New Hope Reformed Church 2015</span>
                         </div>
                     </div>
                 </div>
