--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
                             </span>
                             <h4 class="subsection-heading">Location</h4>
                             <p class="text-muted large">100 Herrmann Pl. Yonkers, New York 10710</p>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1874.2011239559713!2d-73.86008593428204!3d40.95614240191103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2ed392c443915%3A0x594df7baf3822602!2sNew+Hope+Reformed+Church!5e0!3m2!1sen!2sus!4v1444704064948" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <div class="location-map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1874.2011239559713!2d-73.86008593428204!3d40.95614240191103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2ed392c443915%3A0x594df7baf3822602!2sNew+Hope+Reformed+Church!5e0!3m2!1sen!2sus!4v1444704064948" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
