crop leader images to square, language updates, minor alignment fixes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="container">
                     <div class="intro-text">
                         <div class="intro-lead-in">Do nothing from selfish ambition or conceit, but in humility count others more significant than yourselves. Let each of you look not only to his own interests, but also to the interests of others. <p>Philippians 2:3-4</p></div>
-                        <div class="intro-heading">It's Nice To Meet You</div>
+                        <div class="intro-heading">It&#39;s Nice To Meet You</div>
                         <a href="#mission-statement" class="page-scroll btn btn-xl">Explore</a>
                     </div>
                 </div>
@@ -119,9 +119,9 @@
                         <div class="col-lg-12 text-center">
                             <h2 class="section-heading">Mission Statement</h2>
                             <div class="col-md-3"></div>
-                            <div class="col-md-6 text-center text-muted">
+                            <div class="col-md-6 text-center text-muted mission-statement-body">
                                 <p class="large">
-                                    Our mission is the revelation of God&#39;s anointing within His people&#39;s past, present and future.Though we are sinners, God has granted us His grace, and thus we are reconciled with Him and with each other.
+                                    Our mission is the revelation of God&#39;s anointing within His people&#39;s past, present and future. Though we are sinners, God has granted us His grace, and thus we are reconciled with Him and with each other.
                                 </p>
                             </div>
                             <div class="col-md-3"></div>
@@ -175,15 +175,17 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="subsection-heading">Service Time</h4>
-                            <p class="text-muted large">Sunday 11am - 12pm</p>
+                            <h4 class="subsection-heading">Join us!</h4>
+                            <p class="text-muted large"><b>Sunday Service</b> Sunday 11am - 12pm</p>
+                            <p class="text-muted large"><b>Bible Study</b> Sunday 1pm - 2pm</p>
+                            <p class="text-muted large"><b>Prayer &amp; Share</b> Wednesday 11am - 12pm</p>
                         </div>
                         <div class="col-md-6">
                             <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="subsection-heading">Location</h4>
+                            <h4 class="subsection-heading">Church Location</h4>
                             <p class="text-muted large">100 Herrmann Pl. Yonkers, New York 10710</p>
                             <div class="location-map">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1874.2011239559713!2d-73.86008593428204!3d40.95614240191103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2ed392c443915%3A0x594df7baf3822602!2sNew+Hope+Reformed+Church!5e0!3m2!1sen!2sus!4v1444704064948" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -208,22 +210,22 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 text-center">
+                        <div class="col-md-6 text-center leadership-subsection">
                             <h3 class="subsection-heading">
                                 Lightning
                             </h3>
                             <h3 class="leadership-section-subheading section-subheading text-muted">Visionary Board Committee</h3>
                             <p class="large">
-                                The purpose of Lightning is to oversee the ministry’s overall mission in the current and future state, and to ensure that certain tasks aligned to the mission statement are appropriately identified, measured, monitored and controlled within the governance process managed by Lightning. Lightning members are nominated and approved by the Pastor.
+                                The purpose of Lightning is to oversee the ministry&#39;s overall mission in the current and future state, and to ensure that certain tasks aligned to the mission statement are appropriately identified, measured, monitored and controlled within the governance process managed by Lightning.
                             </p>
                         </div>
-                        <div class="col-md-6 text-center">
+                        <div class="col-md-6 text-center leadership-subsection">
                             <h3 class="subsection-heading">
                                 Thunder
                             </h3>
                             <h3 class="leadership-section-subheading section-subheading text-muted">Administrative Board Committee</h3>
                             <p class="large">
-                                The purpose of Thunder is to manage the tasks and activities aligned to the ministry's mission statement. Such tasks and activities are designed for the benefit of the congregation by promoting fellowship and awareness. New Thunder members are nominated by Lightning, recommended to existing Thunder members, and appointed by the congregation by election, which is held annually on the first Sunday of June, or as needed.
+                                The purpose of Thunder is to manage the tasks and activities aligned to the ministry&#39;s mission statement. Such tasks and activities are designed for the benefit of the congregation by promoting fellowship and awareness.
                             </p>
                         </div>
                     </div>        
