--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/agency.css" rel="stylesheet">
 
     <!-- Parallax CSS -->
-    <link href="css/parallax.css" rel="stylesheet">
+    <link href="css/stellar.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
