--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                             <p class="help-block text-danger"></p>
                                         </div>
                                         <div class="form-group">
-                                            <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" data-validation-required-message="Please enter your phone number.">
                                             <p class="help-block text-danger"></p>
                                         </div>
                                     </div>
