--- a/index.html
+++ b/index.html
@@ -232,21 +232,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/paullee.png" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/paullee.png" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Paul Lee</h4>
                                 <p class="text-muted">Lightning // EM Pastor</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jaesunhwang.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/jaesunhwang.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Jaesun Hwang</h4>
                                 <p class="text-muted">Lightning // Missions Director</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/pamelahwang.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/pamelahwang.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Pamela Hwang</h4>
                                 <p class="text-muted">Thunder // Operations Officer</p>
                             </div>
@@ -255,21 +255,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jessicakim.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/jessicakim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Jessica Kim</h4>
                                 <p class="text-muted">Lightning // Coordinator</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/jamesyoon.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/jamesyoon.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>James Yoon</h4>
                                 <p class="text-muted">Lightning // Membership Care</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/hyunjinpark.png" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/hyunjinpark.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Hyunjin Park</h4>
                                 <p class="text-muted">Thunder // House and Design</p>
                             </div>
@@ -278,21 +278,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/matthewkim.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/matthewkim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Matthew Kim</h4>
                                 <p class="text-muted">Thunder // Worship Leader</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/peterchong.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/peterchong.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Peter Chong</h4>
                                 <p class="text-muted">Thunder // Events &amp; Ministries Coordinator</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/minamin.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/minamin.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Mina Min</h4>
                                 <p class="text-muted">Thunder // Events &amp; Ministries Coordinator</p>
                             </div>
@@ -301,21 +301,21 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/sylvialee.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/sylvialee.jpg" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Sylvia Lee</h4>
                                 <p class="text-muted">Media // Media Coordinator</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/minjuji.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/minjuji.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Minju Ji</h4>
                                 <p class="text-muted">Thunder // General Administration</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/bios/youhyunkim.jpg" class="img-responsive img-circle" alt="">
+                                <img src="img/bios/youhyunkim.JPG" class="img-responsive img-circle" alt="" height=250 width=250>
                                 <h4>Youhyun Kim</h4>
                                 <p class="text-muted">Media // Webmaster</p>
                             </div>
@@ -682,7 +682,7 @@
                 <div class="container">
                     <div class="row text-center">
                         <div class="col-lg-12">
-                            <span class="copyright">Copyright &copy; New Hope Reformed Church 2015</span>
+                            <span class="copyright">Copyright &copy; New Hope Reformed Church 2016</span>
                         </div>
                     </div>
                 </div>
